[project]
name = "sysplant"
version = "0.5.0"
description = "SysPlant - Your syscall factory"
authors = [
    {name = "Ben Mz", email = "x42en@users.noreply.github.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10,<4"

[project.optional-dependencies]
mcp = ["mcp[cli]>=1.0"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
poetry-bumpversion = "^0.3.3"
pytest-cov = "^6.0.0"

[tool.poetry.group.mcp]
optional = true

[tool.poetry.group.mcp.dependencies]
mcp = {version = ">=1.0", extras = ["cli"]}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[[tool.poetry_bumpversion.replacements]]
files = ["__metadata.py"]
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'

[tool.pytest.ini_options]
# Also see
# https://docs.pytest.org/en/6.2.x/customize.html#pyproject-toml
# https://pytest-cov.readthedocs.io/en/latest/config.html
# If you want to see console output from tests, include -s flag
addopts = [
    '--cov-fail-under=80',
    '--cov-report=html:pytest',
    '--cov-report=term-missing',
    '--junitxml=report.xml'
]

[tool.coverage.run]
omit = ["tests"]
source = ["sysplant"]
